--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -52,6 +52,9 @@ font-size: 50px;
 color: #f4511e;
 font-size: 200px;
 }
+.alert{
+    margin: 10px !important;
+}
 .thumbnail {
 padding: 0 0 15px 0;
 border: none;
