--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -34,11 +34,14 @@
 <body>
 
   <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light">
-                     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="navbar-toggler-icon"></span>
     </button> 
-    <a class="navbar-brand" href="/">ALPHA</a>
+    <% if (data.loggedIn){ %>
+      <a id="titleText" class="navbar-brand" href="/"><%=data.user.firstName%> <%=data.user.lastName%></a>
+    <% } else { %>
+      <a id="titleText" class="navbar-brand" href="/">ALPHA</a>
+    <% } %>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -62,9 +65,12 @@
                      <a class="dropdown-item" href="#">Terms and Conditions</a>
                     <div class="dropdown-divider">
                     </div> 
-                    <a class="dropdown-item" onclick="document.getElementById('id01').style.display='block'" id="register">Sign up</a>
-                    <a class="dropdown-item" onclick="openForm()" id="login">Login</a>
-                    <a class="dropdown-item" href="#" id="quit">Logout</a>
+                    <% if (data.loggedIn){ %>
+                      <a class="dropdown-item" href="#" id="quit">Logout</a>
+                    <% } else { %>
+                      <a class="dropdown-item" onclick="openModal()" id="register">Sign up</a>
+                      <a class="dropdown-item" onclick="openForm()" id="login">Login</a>
+                    <% } %>
                 </div>
             </li>
         </ul>
@@ -73,25 +79,26 @@
 
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" action="/action_page.php">
+  <form class="modal-content">
     <div class="container">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
       <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="text" placeholder="Enter Email" name="email" id="emailSignup" required autocomplete="username">
 
       <label for='first-name'><b>Your First Name</b></label>
-      <input type='text' placeholder ='Enter First Name' name='first-name' required>
+      <input type='text' placeholder ='Enter First Name' name='first-name' id="fnSignup" required>
 
       <label for='last-name'><b>Your Last Name</b></label>
-      <input type='text' placeholder ='Enter Last Name' name='last-name' required>
+      <input type='text' placeholder ='Enter Last Name' name='last-name' id="lnSignup" required>
 
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" placeholder="Enter Password" name="psw" id="pwdSignup" required autocomplete="new-password">
 
       <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+      <input type="password" placeholder="Repeat Password" name="psw-repeat" id="pwdRepeat" required autocomplete="off">
+      <p id="alertMsg" class="alert alert-danger" style="display: none;"></p>
 
       <label>
         <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
@@ -101,7 +108,7 @@
 
       <div class="clearfix">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <button type="button" class="signupbtn" id="registerBtn">Sign Up</button>
       </div>
     </div>
   </form>
@@ -123,18 +130,32 @@
       <h1>Login</h1>
 
       <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="text" placeholder="Enter Email" name="email" id="usernameInput" required autocomplete="username">
 
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <button type="submit" class="btn">Login</button>
+      <input type="password" placeholder="Enter Password" name="psw" id="passwordInput" required autocomplete="current-password">
+      <p id="alertLogin" class="alert alert-danger" style="display: none;"></p>
+      <button type="button" class="btn btn-warning" id="signInRegisterBtn" style="display: none;" onclick="openModal()">Register</button>
+      <button type="button" class="btn" id="login_btn">Login</button>
       <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
   </form>
-  <form>
-
-  </form>
 </div>
+
+<script>
+  function openModal(){
+    closeForm();
+    document.getElementById('id01').style.display='block';
+  }
+</script>
+
+<script>
+  var loginBlock = document.getElementById("myForm");
+  window.onclick = function(e){
+    if (e.target == loginBlock){
+      loginBlock.style.display = "none";
+    }
+  }
+</script>
 
 <script>
   function openForm() {
