--- a/views/ui/dashboard.ejs
+++ b/views/ui/dashboard.ejs
@@ -64,6 +64,7 @@
         <button id="refreshDataBtn" class="btn btn-warning btn-sm">Refresh</button>
     </div>
     <div class="container" style="margin-top: 2rem;">
+        <p class="alert alert-danger" id="errorAlert" style="display: none;"></p>
         <table class="table table-striped table-dark">
             <thead>
                 <tr>
@@ -117,6 +118,12 @@
                         `;
                         $('#agent-table-body').append(entry);                    
                     });
+                },
+                error: (error) => {
+                    if (error.status == 500){
+                        $('#errorAlert').html("Sorry we can't retrieve the agents data at this moment!");
+                        $('#errorAlert').show();
+                    }
                 }
             });
         }
