--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -19,30 +19,29 @@ a {
     text-decoration: none;
 }
 
+p {
+    font-weight: 100 !important;
+    font-size: 1rem;
+}
+
 h2 {
-font-size: 24px;
-text-transform: uppercase;
-color: #303030;
-font-weight: 600;
-margin-bottom: 30px;
-}
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 30px;
+    }
 h4 {
-font-size: 19px;
-line-height: 1.375em;
-color: #303030;
-font-weight: 400;
-margin-bottom: 30px;
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    margin-bottom: 30px;
 }  
-.jumbotron {
-background-color: light;
-padding: 100px 25px;
-font-family: Montserrat, sans-serif;
-}
+
 .container-fluid {
 padding: 60px 50px;
 }
 .bg-grey {
-background-color: #f6f6f6;
+    background-color: #f3f3f3;
 }
 .logo-small {
 color: #f4511e;
@@ -65,16 +64,11 @@ width: 100%;
 height: 100%;
 margin-bottom: 10px;
 }
-.carousel-control.right, .carousel-control.left {
-background-image: url("/img/bg.jpg");
-color: #f4511e;
+
+.carousel-indicators{
+    position: relative !important;
 }
-.carousel-indicators li {
-border-color: #f4511e;
-}
-.carousel-indicators li.active {
-background-color: #f4511e;
-}
+
 .item h4 {
 font-size: 19px;
 line-height: 1.375em;
@@ -83,15 +77,17 @@ font-style: italic;
 margin: 70px 0;
 }
 .item span {
-font-style: normal;
+    font-style: normal;
 }
 .panel {
-border: 1px solid #f4511e; 
-border-radius:0 !important;
-transition: box-shadow 0.5s;
+    border: 1px solid #f4511e; 
+    transition: box-shadow 0.5s;
+}
+.panel-body{
+    padding: 1rem;
 }
 .panel:hover {
-box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
 .panel-footer .btn:hover {
 border: 1px solid #f4511e;
@@ -99,14 +95,14 @@ background-color: #fff !important;
 color: #f4511e;
 }
 .panel-heading {
-color: #fff !important;
-background-color: #f4511e !important;
-padding: 25px;
-border-bottom: 1px solid transparent;
-border-top-left-radius: 0px;
-border-top-right-radius: 0px;
-border-bottom-left-radius: 0px;
-border-bottom-right-radius: 0px;
+    color: #fff !important;
+    padding: 25px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    background-color: #e6663f;
 }
 .panel-footer {
 background-color: white !important;
@@ -410,12 +406,59 @@ input[type='text']{
 
 
 .jumbotron{
-    background-image: url("/img/bg.jpg");   
-    background-position: 50%;
+    background-attachment: fixed;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: rgba(255, 255, 255, 0.60);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: #fff;
+}
+
+.jumbotron-small{
+    margin: 10rem;
+    padding: 2rem;
+    background-attachment: fixed;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.bg1{
+    background-image: url("/img/bg.jpg");   
+}
+
+.bg2{
+    background-image: url("/img/bg2.jpg");   
+    background-position: top;
+}
+
+.bg3{
+    background-image: url("/img/bg3.jpg");   
+    background-position: top;
+}
+
+.bg4{
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/bg4.jpg");   
+    background-position: bottom;
+    color: white !important;
+}
+
+.bg5{
+    background-image: url("/img/bg5.jpg");   
+    background-position: top;
+}
+
+.bg6{
+    background-image: url("/img/bg6.jpg");   
+    background-position: bottom;
+    color: #303030 !important;
 }
 
 .demo-text{
@@ -688,4 +731,18 @@ display: table;
     align-items: center;
     font-weight: 100 !important;
     font-family: initial;
+}
+
+.map-container{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.map-container iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 }
