--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -197,8 +197,8 @@
     <div class="col">
       <h2>About Alpha Holding Inc.</h2><br>
       <div class="jumbotron bg2">
-        <p>Alpha Holding is a leading private sector bank in Narnia. The Bank's consolidated total assets stood at Rs.12.50 trillion at June 30, 2019. Alpha Holding currently has a network of 5,275 branches and 15,589 ATMs across Narnia. Alpha Holding was originally promoted in 1994 by Alpha Limited, an Narnian financial institution, and was its wholly-owned subsidiary.</p>
-        <p>As we identify, attract and nurture talent in the many territories where we operate, Alpha understands that character sets individuals apart and gives our organisation the edge over competition.</p>
+        <p class="p-lg">Alpha Holding is a leading private sector bank in Narnia. The Bank's consolidated total assets stood at Rs.12.50 trillion at June 30, 2019. Alpha Holding currently has a network of 5,275 branches and 15,589 ATMs across Narnia. Alpha Holding was originally promoted in 1994 by Alpha Limited, an Narnian financial institution, and was its wholly-owned subsidiary.</p>
+        <p class="p-lg">As we identify, attract and nurture talent in the many territories where we operate, Alpha understands that character sets individuals apart and gives our organisation the edge over competition.</p>
       </div>
     </div>
   </div>
@@ -210,7 +210,7 @@
       <h2>MISSION:</h2>
     </div>
     <div class="jumbotron bg3 col-sm-8">
-      <p>We ensure we maintain the highest professional and moral standards in all our dealings with you. We have uncompromising discipline, clarity and bravery to do what is right for you and every decision is made in your best interest.</p>
+      <p class="p-lg">We ensure we maintain the highest professional and moral standards in all our dealings with you. We have uncompromising discipline, clarity and bravery to do what is right for you and every decision is made in your best interest.</p>
     </div>
   </div>
 </div>
@@ -266,21 +266,21 @@
       <div class="col-sm-4">
         <div class="thumbnail">
           <!-- <img src="" alt="" width="400" height="300"> -->
-          <p><strong>Manager</strong></p>
+          <p class="p-lg"><strong>Manager</strong></p>
           <p>Yes</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
           <!-- <img src="" alt="" width="400" height="300"> -->
-          <p><strong>Data Analytics</strong></p>
+          <p class="p-lg"><strong>Data Analytics</strong></p>
           <p>Yes</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
             <!-- <img src="" alt="" width="400" height="300"> -->
-          <p><strong>Accountants</strong></p>
+          <p class="p-lg"><strong>Accountants</strong></p>
           <p>Yes</p>
         </div>
       </div>
